--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="descripcion" content="principal ">
     <meta name="keywords" content="HTML, ASP, JS, META, insumos, guantes, cofias, guantes latex, guantes nitrilo, insumos medicos, insumos quirurgicos, barbijos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="preconectar" href="https://fonts.googleapis.com">
       <enlace rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
       <enlace href="https: //fonts.googleapis.com/css2? familia= Montserrat:peso@300 &family= Raleway:wght@300 & family= Ruda & display=swap" rel="hoja de estilo">
