--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -44,7 +44,7 @@
     </div>
   </div>
 </nav>
-            
+      <div class="container">      
       <div class="container-contacto">
         <form target="_blank" action="https://formsubmit.co/Admtodoinsumos@gmail.com" method="POST">
           <div class="form-group">
@@ -63,6 +63,7 @@
           <button type="submit" class="btn btn-lg btn-success btn-block">Enviar</button>
         </form>
     </div>
+  </div>
 
 
            
